<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MorseCodeConverter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_morse">MorseActivity</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="morseToText">Morse Code to Text</string>
    <string name="textToMorse">Text To Morse Code</string>
    <string name="inputMorse">Morse Code Input:</string>
    <string name="textDisplay">Text Display</string>
    <string name="textToMorseInput">Text Input:</string>
    <string name="text_MorseDisplay">Morse Code Display</string>
    <string name="textConvertBtn">Convert</string>

</resources>
